# DesignPattern

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/AbstractFactory/: CAbstractFactory.cpp  CAbstractFactory.h  CAbstractProductA.cpp  CAbstractProductA.h  CAbstractProductB.cpp  CAbstractProductB.h  CConcreteFactoryA.cpp  CConcreteFactoryA.h  CConcreteFactoryB.cpp  CConcreteFactoryB.h  CProductA1.cpp  CProductA1.h  CProductA2.cpp  CProductA2.h  CProductB1.cpp  CProductB1.h  CProductB2.cpp  CProductB2.h
src/Adapter/Adapter_class/: CAdaptee_cla.cpp  CAdaptee_cla.h  CAdapter_cla.cpp  CAdapter_cla.h  CTarget_cla.cpp  CTarget_cla.h
src/Adapter/Adapter_object/: CAdaptee_obj.cpp  CAdaptee_obj.h  CAdapter_obj.cpp  CAdapter_obj.h  CTarget_obj.cpp  CTarget_obj.h
src/Base_problem/ADT_stack/: CKVMemOpt.cpp  CKVMemOpt.h  CStack.cpp  CStack.h  CTestStacker.cpp  CTestStacker.h
src/Base_problem/Array/: CArrayMemoryAllocate.cpp  CArrayMemoryAllocate.h
src/Base_problem/FunctionPointer/: CFuncPtr.cpp  CFuncPtr.h
src/Base_problem/Trace/: CTrace.cpp  CTrace.h
src/Base_problem/connectpool/: CConnectPool.cpp  CConnectPool.h
src/Base_problem/exception/: CException.cpp  CException.h
src/Base_problem/function/: CRecures.cpp  CRecures.h
src/Base_problem/limits/: CLimits.cpp  CLimits.h
src/Base_problem/stringallocmem/: CStringBad.cpp  CStringBad.h
src/Base_problem/threadpool/: CThreadPool.cpp  CThreadPool.h
src/Bridge/: CAbstraction.cpp  CAbstraction.h  CAbstractionImp.cpp  CAbstractionImp.h  CConcreteAbstractionImpA.cpp  CConcreteAbstractionImpA.h  CConcreteAbstractionImpB.cpp  CConcreteAbstractionImpB.h  CRefinedAbstraction.cpp  CRefinedAbstraction.h
src/Builder/: CBuilder.cpp  CBuilder.h  CConcreteBuilder.cpp  CConcreteBuilder.h  CDirector.cpp  CDirector.h  CProductBuild.cpp  CProductBuild.h  CProductPart.cpp  CProductPart.h
src/Composite/: CComponent_pos.cpp  CComponent_pos.h  CComposite.cpp  CComposite.h  CLeaf.cpp  CLeaf.h
src/Decorator/: CComponent.cpp  CComponent.h  CConcreteComponent.cpp  CConcreteComponent.h  CConcreteDecorator.cpp  CConcreteDecorator.h  CDecorator.cpp  CDecorator.h
src/Facade/: CFacade.cpp  CFacade.h  CSubSystemA.cpp  CSubSystemA.h  CSubSystemB.cpp  CSubSystemB.h
src/Factory/: CConcreteFactory.cpp  CConcreteFactory.h  CConcreteProduct.cpp  CConcreteProduct.h  CFactory.cpp  CFactory.h  CProduct.cpp  CProduct.h
src/Flyweight/: CConcreteFlyweight.cpp  CConcreteFlyweight.h  CFlyweight.cpp  CFlyweight.h  CFlyweightFactory.cpp  CFlyweightFactory.h  CUnshareConcreteFlyweight.cpp  CUnshareConcreteFlyweight.h
src/Prototype/: CConcreteProtoType.cpp  CConcreteProtoType.h  CPrototype.cpp  CPrototype.h
src/Singleton/: CSingleton.cpp  CSingleton.h
src/UseCPP11New/: CUseNewCPP.cpp  CUseNewCPP.h
src/UseFFmpegAPI/use_allAPId/: CUseAllAPI.cpp  CUseAllAPI.h
src/UseFFmpegAPI/use_libavcodec/: CAudioOpt.cpp  CAudioOpt.h  CUseAvCodec.cpp  CUseAvCodec.h  CVideoOpt.cpp  CVideoOpt.h
src/UseOpenCVAPI/: CMakeLists.txt  UseVideoCapture.cpp  UseVideoCapture.h
src/proxy/: CConcreteSubject.cpp  CConcreteSubject.h  CProxy.cpp  CProxy.h  CSubject.cpp  CSubject.h
